<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="PRG_CommRFID" Id="{f7c1f7f5-2a78-4941-9051-281198eabe41}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_CommRFID
	VAR
		ControllerRFID : SerialLineControl;
	END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ControllerRFID(
	Mode:= SERIALLINEMODE_EL6_22B, 
	pComIn:= ADR(ELDataIn_RFID), 
	pComOut:= ADR(ELDataOut_RFID), 
	SizeComIn:= TO_UINT( SIZEOF(ELDataIn_RFID)), 
	Error=> ErrorFastRFID, 
	ErrorID=> , 
	TxBuffer:= TxBufferRFID, 
	RxBuffer:= RxBufferRFID);
	
	]]></ST>
    </Implementation>
    <LineIds Name="PRG_CommRFID">
      <LineId Id="27" Count="9" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>